# oracle-thin-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
directives/: current-plan.md  current_plan.md  environment.md  protocol-learnings.md  rust-patterns.md  workflow.md
directives/scripts/: compare_execute_msg.py  create_test_table.py  dump_execute_message.py  query_with_debug.py
examples/: test_lob_debug.rs
src/: connection.rs  cursor.rs  error.rs  lib.rs
src/protocol/: auth.rs  buffer.rs  connect.rs  constants.rs  crypto.rs  message.rs  mod.rs  packet.rs  response.rs
src/protocol/decode/: date.rs  mod.rs  number.rs
src/protocol/messages/: auth.rs  connect.rs  data_types.rs  execute.rs  fetch.rs  mod.rs
src/protocol/types/: column.rs  fetch_var.rs  lob.rs  metadata.rs  mod.rs  oracle_type.rs  row.rs  value.rs
tests/: .env.example  connect_python.py  docker-compose.yml  test_19c.rs  test_23ai.rs  test_connection_errors.rs
tests/ora-init-scripts/: dummy_data.sql
tests/scripts/: README.md  migrate.py
