[package]
name = "oracle-thin-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
bytes = "1"
thiserror = "2"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
pbkdf2 = "0.12"
hmac = "0.12"
chrono = "0.4"
rand = "0.8"
hostname = "0.4"
whoami = "1"
base64 = "0.22"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
dotenvy = "0.15"
